# iree-llvm-sandbox

./: foo.py  module.fb
include/Dialects/LinalgExt/: LinalgExtOps.td  Passes.td
jasc/: BUILD  WORKSPACE  call_kernel.cc  jasc.py  mlir_lowering.cc  primitives.py
jasc/dialect/: BUILD  __init__.py  _ods_common.py  bindings.cc
jasc/mlir/: BUILD.bazel
jasc/mlir/_mlir_libs/: BUILD.bazel  _site_initialize_0.cc  jax_dialects.cc
jasc/patches/: xla.patch
jasc/transform_ops/: BUILD  _ods_common.py  _transform_ops_gen.py  jasc_transform_ops.cc  jasc_transform_ops.py
lib/Dialects/LinalgExt/Transforms/: InParallelToSequentialFor.cpp
runners/: CMakeLists.txt
runners/lib/: CMakeLists.txt
runners/lib/CAPython/: CMakeLists.txt  LinalgTensorPasses.capi.cpp  LinalgTensorPasses.py.cpp  Passes.capi.cpp.inc
runners/lib/CAPython/Linalg/: __init__.py
test/LinalgExt/: in-parallel-to-sequential-for.mlir
